--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -37,10 +37,15 @@ jobs:
   
   hello-world-windows:
     runs-on: windows-latest
-    needs: hello-world-ubuntu
+    needs: [hello-world-ubuntu, hello-world-macos]
     
-    steps:
-    
+    steps:  
       - name: Print hello world
         run: echo "Hello world Windows"
-  
+        
+  hello-world-macos:
+    runs-on: macos-latest
+    
+    steps:
+      - name: Print hello world
+        run: echo "Hello world MacOS"
