--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           target: 'https://impacta-juice-shop.herokuapp.com'
-          rules_file_name: '.zap/rules.tsv'
+          #rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
